--- a/package.json
+++ b/package.json
@@ -10,13 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@smastrom/react-rating": "^1.5.0",
+    "@tanstack/react-query": "^5.87.4",
+    "axios": "^1.11.0",
     "localforage": "^1.10.0",
     "match-sorter": "^8.1.0",
     "react": "^19.1.0",
+    "react-awesome-slider": "^4.1.0",
+    "react-awesome-stars-rating": "^0.16.2",
     "react-dom": "^19.1.0",
+    "react-parallax": "^3.5.2",
+    "react-rating": "^2.0.5",
+    "react-rating-stars-component": "^2.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.7.1",
-    "sort-by": "^1.2.0"
+    "react-star-rating-input": "^8.0.1",
+    "sort-by": "^0.0.2",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
